# todocxx

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  compile_flags.txt  flake.nix
.github/workflows/: build_linux.yml  release_assets.yml
config/: project.h.in  project.hpp.in
src/: main.c  main.cc  model.h  project.h  project.hpp
src/cli/: table.h  table.hpp  todo.hpp
src/fs/: storage.h
src/io/: csv.hpp  storage.hpp
src/services/: storage.c  storage.h
src/utils/: colors.hpp  fmt.c  fmt.cc  fmt.h  fmt.hpp
